# catt.io

./: .gitignore  README.md  bsconfig.json  catt-mode.el  catt.opam  default.nix  dune-project
agda/: Catt.agda  Prelude.agda
bs/: README.md  bsconfig.json  package.json
examples/: ast.txt  base.catt  basics.catt  check  cohcyl.catt  coherence.catt  computope.catt  cyl-1.catt  cyl-2.catt  cyl-susp.catt  cyl-test.catt  cyl-vert.catt  cylcomp.catt  cylfull.catt  cylinders.catt  cylscratch.catt  cylutil.catt  demo.catt  division.catt  division2.catt  dune  eh-catt.catt  eh-ichg.catt  eh-lift.catt  eh.catt  ehtree.txt  endo.catt  eqv-cancel.catt  example_4_1.catt  example_4_2.catt  example_4_3_cattsu.catt  example_4_4.catt  lambda_prune.catt  monoidal.catt  nf-test.catt  pads.catt  prelude.catt  prune1.catt  prune2.catt  pruning.catt  (+15 more)
examples/cylinders/: canonical.catt  example0.catt  example1.catt
examples/old/: cyl-2.catt  (+8 more)
lib/: command.ml  common.ml  computope.ml  cylinder.ml  dune  dyck.ml  eval.ml  examples.ml  expr.ml  io.ml  lexer.ml  lexer.mll  meta.ml  mtl.ml  newexpr.ml  newlex.ml  newterm.ml  normalization.ml  parser.messages  parser.mly  pd.ml  rawcheck.ml  reduction.ml  scheme.ml  suite.ml  syntax.ml  term.ml  typecheck.ml  unify.ml  util.ml  value.ml
lib/newold/: lexer.mll  parser.messages  syntax.ml
lib/old/: parser.messages  parser.mly  pd.ml  rawcheck.ml  term.ml  typecheck.ml
src/: catt.ml  common.ml  dune  expr.ml  lexer.mll  normalization.ml  parser.mly  pd.ml  syntax.ml  term.ml  typecheck.ml  wrangling.ml
test/: full-syllepsis.txt  syllepsis.txt
web/: cattweb.ml  dune  index.html
