opam-version: "2.0"
maintainer: "ericfinster@gmail.com"
authors: ["Eric Finster, Jamie Vicary"]
homepage: "https://github.com/ericfinster/catt.io"
bug-reports: "https://github.com/ericfinster/catt.io/issues"
dev-repo: "https://github.com/ericfinster/catt.io.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "alcotest" {test}
]
